# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "web-ext-native-messaging"
description = "WebExtension native messaging with serde_json as the (de)serializer."
version = "0.1.0"
authors = ["Holllo <helllo@holllo.cc>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Holllo/web-ext-native-messaging"
edition = "2018"

[lib]
path = "source/lib.rs"

[dependencies]
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
